--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2673,11 +2673,11 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_holliday_desc:0 "Paid holiday is seen as a great leap forward by the working men and women, Chamberlain's cabinet is a true fighter for social reforms!"
  cabinet_crisis:0 "Cabinet Crisis"
  ENG_asia_buildup:0 "Asian Military Buildup"
- ENG_asia_buildupe_desc:0 ""
+ ENG_asia_buildupe_desc:0 "Japan's aggressive posture threatens our eastern colonial empire. We build up our defenses to prepare for any possible Japanese attack."
  ENG_peace_time:0 "Peace for Our Time!"
  ENG_peace_time_desc:0 "A new era of peace and mutual trust awaits europe!"
  ENG_polish_guarantee:0 "Anglo-Polish Mutual Assistance Pact"
- ENG_polish_guaranteee_desc:0 "In an attempt to deter revisionist regimes from further aggression, HM Government vows to lend the Polish Government all support in the event any threats to Polish independence, when the Polish Government accordingly considers it vital to resist. In a secret protocol of the pact, our assistance is only guaranteed in the case of an attack on Poland specifically by Germany, but in the case of attack by other countries, we are required only to consult together on measures to be taken in common. This will allow us to avoid military conflict with any other potential aggressors and to focus on Germany. The Poles wouldn't be so amused with this interpretation of the pact though..."
+ ENG_polish_guarantee_desc:0 "To deter Germany we will promise to assist Poland with maintaining their independence. In a secret protocol of the pact, our assistance is only guaranteed in the case of an attack on Poland specifically by Germany, but in the case of attack by other countries, we are required only to consult together on measures to be taken in common. This will allow us to avoid military conflict with any other potential aggressors and to focus on Germany."
  ENG_try_to_handle_the_king:0 "Handle the new King"
  ENG_try_to_handle_the_king_desc:0 "Our new King has made some poorly-worded political statements, and is living a life that weakens our country. We must stop him! We have also heard that he is often visited by an American woman... we should probably keep an eye on that."
  ENG_house_of_commons:0 "House Of Commons"
@@ -2691,10 +2691,10 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_rethink:0 "Change of course"
  ENG_rethink_desc:0 "We need to rethink our stance on Germany and the rise of fascism in Europe... Appeasement might have been a bit naive."
  ENG_local_defence_volunteers:0 "Organize Local Volunteers"
- ENG_local_defence_volunteers_desc:0 "We have local losely organized volunteer regiments, they should focus our efforts on keeping the homeland safe."
+ ENG_local_defence_volunteers_desc:0 "The Local Defense Volunteers (LDV) was a militia force set to be the secondary line of defence in case of any German invasion of the Home Islands. It would later be redesignated as the Home Guard"
  ENG_local_defence_volunteers_tt:0 "\nGain 8 §Redit-locked§! §YGarrisons§! with 5 battalions each.\n"
  ENG_home_defence:0 "Home Defense"
- ENG_home_defence_desc:0 "A vast empire is of no use if we cannot protect the Brits at home. We should focus our efforts on keeping the homeland safe."
+ ENG_home_defence_desc:0 "The build up of the Kriegsmarine threatens our coast with invasion. Though our empire may be vast and rich, it serves no purpose to us if we lose our Home."
  ENG_home_defence_tt:0 "\nGain 8 §Redit-locked§! §YGarrisons§! with 5 battalions each.\n"
  ENG_foreign_military_investments:0 "Foreign Military Investments"
  ENG_foreign_military_investments_desc:0 "We should pave the way for and encourage foreign military enterprises to invest in Britain. They need to be short-tracked past the strict regulations and permits."
@@ -2796,7 +2796,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_royal_ordinance_factories:0 "Royal Ordnance Factories"
  ENG_royal_ordinance_factories_desc:0 "The Royal Arsenal at Woolwich is woefully insufficient to produce all the munitions and small arms we need. As many countries of the world are rearming and ignoring previous treaties, we should establish many more factories around the country, preferably in relatively safe areas."
  ENG_shadow_scheme:0 "The Shadow Scheme"
- ENG_shadow_scheme_desc:0 "The Air Ministry has come up with a brilliant suggestion for easier conversion of civilian factories into military ones. With the appropriate grants and loans to various key companies, their factories can be extended and adapted in advance to make the transition to military applications much smoother."
+ ENG_shadow_scheme_desc:0 "The Air Ministry has come up with a brilliant suggestion for the effecient shift of civilian production, to military production. With the appropriate grants and loans to various key companies, their factories can be extended and adapted in advance to make the transition to military applications much smoother."
  ENG_BSA:0 "BSA Company"
  ENG_BSA_desc:0 "The Royal Ordnance Factories are not producing enough small arms, but, like we did in the Great War, we could contract the Birmingham Small Arms Company and expand their capacity."
  ENG_inf_tank:0 "Cruising Matilda"
@@ -2806,7 +2806,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_grand_battleplan:0 "The Excellent Plan"
  ENG_grand_battleplan_desc:0 "An excellent plan executed tomorrow is better than a rushed plan executed before the afternoon tea."
  ENG_heavy_tank:0 "Heavies"
- ENG_heavy_tank_desc:0 "The legacy of the Mark I tank in ww1 is not all doom, new inventions in suspension and drive designs can make the difficulties of a heavy tank overcomeable."
+ ENG_heavy_tank_desc:0 "The legacy of the Mark I tank in WW1 is not all doom, new inventions in suspension and drive designs can make the difficulties of a heavy tank overcomeable."
  ENG_motorized_focus:0 "A Motorized Army"
  ENG_motorized_focus_desc:0 "Recently the Army has been experimenting with fully motorized infantry units. As yet, they have not formed any fully motorized divisions, but with with the right words to the Secretary of State for War this could soon be possible."
  ENG_tank_focus:0 "Royal Tank Regiment"
@@ -2818,17 +2818,17 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_improved_war_cabinet:0 "Reconstructed War Cabinet"
  ENG_improved_war_cabinet_desc:0 "On 19 February 1942 a reconstructed War Cabinet was announced by Churchill. Churchill strongly believed that the War Cabinet should be kept to a relatively small number of individuals to allow efficient execution of the war effort. Even so, there were a number of ministers who, though they were not members of the war cabinet, were "Constant Attenders"."
  ENG_war_cabinet:0 "Establish War Cabinet"
- ENG_war_cabinet_desc:0 "We can beat around the bush no longer. The British Empire must ready itself for war and make sure it perseveres no matter the cost."
+ ENG_war_cabinet_desc:0 "During this time, it is paramount that we establish committee made up of high ranking officials, both political and military, that will discuss the plans and means to successfuly wage war."
  ENG_equipment_effort:0 "Equipment Effort"
  ENG_equipment_effort_desc:0 "We cannot neglect the supply of support equipment needed for our army. Guns and tanks are well and good, but we need uniforms, radios, repair kits and more."
  ENG_anti_air_weapons:0 "Anti-Air Weaponry"
  ENG_anti_air_weapons_desc:0 "No bombers will damage our ports and cities once we have upgraded our air defense system, through better understanding of air power and the brute force of anti-air weapons."
  ENG_artillery_drills:0 "Artillery Drills"
- ENG_artillery_drills_desc:0 "In times of uncertainty or war the British Empire requires a first-rate military. There is no excuse for anything less."
+ ENG_artillery_drills_desc:0 "We need more boom! Testing and developing new artillery equipment is of the the upmost priority."
  ENG_military_drills:0 "Army Drills"
- ENG_military_drills_desc:0 "In times of uncertainty or war the British Empire requires a first-rate military. There is no excuse for anything less."
+ ENG_military_drills_desc:0 "We need more bang! Testing and developing new infantry equipment is of the upmost priority."
  ENG_special_forces:0 "Special Forces"
- ENG_special_forces_desc:0 "Not all soldiers get the same training or are equal in combat ability. Some soldiers have specializations and special skills which can be used to accomplish other tasks. We should embrace this diversity."
+ ENG_special_forces_desc:0 "Not all soldiers get the same training. We must create military units capable of conducting special operations through unconventional means. These soldiers will be proficient in conducting warfare from the beaches, mountains, or skies."
  ENG_airborne:0 "Airborne Red Devils"
  ENG_airborne_desc:0 "Designed to be an elite airborne force, the Red Devils will be able to accommodate our air force expansion and modernize our Commonwealth's Airborne potential. Candidates for entry into the elite corps will be tested and trained at the No. 1 Parachute Training School, RAF Ringway. Airborne soldiers are expected to fight against superior numbers of the enemy equipped with artillery and tanks. Thus their training is designed to encourage a spirit of self-discipline, self-reliance and aggressiveness."
  ENG_machine_gun:0 "Bren Gun"
@@ -2852,7 +2852,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_commando_soldiers:0 "Establish the Commandos"
  ENG_commando_soldiers_desc:0 "We should establish a special formation capable of conducting amphibious raids on enemy shores. The force will land, cause damage, and then quickly leave, in a similar fashion to the Boer Commandos during the Boer wars."
  ENG_d_day:0 "D-Day"
- ENG_d_day_desc:0 "We need to prepare for large scale amphibious ladnings on the fortified shores of europe."
+ ENG_d_day_desc:0 "Whether the Soviets need it or not, we must prepare to launch a massive naval invasion of mainland Europe to liberate the occupied peoples from Nazi tyranny. It is time for us to embark upon this great crusade, and bring about the destruction of the German warmachine!"
  ## ENG intervention focuses ##
 
  ENG_denounce_facist_agression:0 "Denounce Fascist Aggression"
@@ -2964,11 +2964,11 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
 
  ## ENG air focuses ##
  ENG_air_bases:0 "Airbase Effort"
- ENG_air_bases_desc:0 "Germany's is quickly ramping up their airforce to levels forbidden by the Treaty of Versailles, we must build airbases to be prepared for the worse, just in case."
+ ENG_air_bases_desc:0 "Germany is quickly ramping up their airforce to levels forbidden by the Treaty of Versailles, we must build airbases to be prepared for the worse, just in case."
  ENG_air_defense:0 "Air Defense"
  air_defense_focus_tt:0 "Set level 2 §YAnti-Air§! in §YEast Anglia§!, §YSussex§! and §YCornwall§!"
  air_defense_focus_bypass_tt:0 "Not enough building slots for §YAnti-Air§!"
- ENG_air_defense_desc:0 "There is no question of where the enemy will be coming from; we must protect the coast with extensive anti-air batteries."
+ ENG_air_defense_desc:0 "Germany is rapidly expanding their bomber programs with aircraft capable of strike the British Isles. There is no doubt they will use it to hamper our war effort as they have attempted to with Zeppelins in the previous war. It is best we be prepared."
  ENG_chain_home:0 "Chain Home"
  ENG_chain_home_desc:0 "We can't afford to allow enemy aircraft to enjoy free reign in our skies while our fighters chase fantastical, imaginary targets, deluded by false information. Relying on agents within our enemy's home is ineffective and may cost many Brits their lives. Instead, we should establish an early-warning system using the newly developed RADAR technology to detect enemy planes before they glimpse British soil. Chain Home, or CH for short, will ensure the RAF always knows where its target lies."
  ENG_chain_home_tt:0 "Will research §YDecimetric Radar§W and construct RADAR in England."
@@ -2982,7 +2982,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_bomber_command_desc:0 "Like Giulio Douhet always said; 'The bomber will always get through!'. Advances in radar technology and anti-air defenses notwithstanding, we should prioritize the development of better bombers."
  ENG_coastal_command:0 "Coastal Command"
  ENG_coastal_command_desc:0 "Our industry is driven by resources shipped to Britain from many distant parts of the Empire. Our convoys are our lifeblood and must be protected by both the Royal Navy and the Royal Air Force. We should set up a special RAF formation to protect the approaches to our ports!"
- ENG_aircraft_production_group:0 "Aircraft Production Group"
+ ENG_aircraft_production_group:0 "London Aircraft Production Group"
  ENG_aircraft_production_group_desc:0 "Aircraft production remains our highest priority. The London Aircraft Production Group (LAPG) should be created to manage and coordinate all available aircraft related production."
  ENG_jet_focus:0 "Jet Aircraft"
  ENG_jet_focus_desc:0 "It seems almost certain that the Jet engine will come to replace propeller engines on airplanes. The potential is enormous, and we must not allow Britain to lag behind in this crucial area of research."
@@ -3090,7 +3090,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_ark:0 "Ark Royal"
  ENG_ark_desc:0 "On the16th of December 1938 the aircraft carrier HMS Ark Royal is commissioned into the Royal Navy."
  ENG_inchindown_tanks:0 "Construct the Inchindown Oil Tanks"
- ENG_inchindown_tanks_desc:0 "officially called 'Inchindown, Royal Navy Fuel Tanks' and also known as the 'Invergordon Oil Fuel Depot'. The complex will consists of six tanks: five are 237 metres (778 ft) long, 9 metres (30 ft) wide, with arched roofs 13.5 metres (44 ft) high; a smaller sixth tank is of the same height and breadth but less long."
+ ENG_inchindown_tanks_desc:0 "Officially called 'Inchindown, Royal Navy Fuel Tanks' and also known as the 'Invergordon Oil Fuel Depot'. The complex will consists of six tanks: five are 237 metres (778 ft) long, 9 metres (30 ft) wide, with arched roofs 13.5 metres (44 ft) high; a smaller sixth tank is of the same height and breadth but less long."
  ENG_doc_base_strike:0 "Base Strike"
  ENG_doc_base_strike_desc:0 "Modern battle fleets will be centered on aircraft carriers, not battleships. The supremacy of air power over ships was demonstrated by the Americans back in 1921!"
  ENG_doc_fleet_in_being:0 "Fleet in Being"
@@ -3102,16 +3102,16 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_military_training_act2:0 "Military Training Act"
  ENG_military_training_act2_desc:0 "The Military Training Act 1939 was an Act of Parliament passed by the Parliament of the United Kingdom on 26 May 1939, in a period of international tension that led to World War II. The Act applied to males aged 20 and 21 years old who were to be called up for six months full-time military training, and then transferred to the Reserve. There was provision for conscientious objectors."
  ENG_food:0 "Food Rationing"
- ENG_food_desc:0 "The war might be long and strenuos and importing goods difficult."
+ ENG_food_desc:0 "During times of war, During times of war, good food, although limited, is a necessity for our frontline troops to do good fighting. It is for this reason that we should seek to reduce food consumpution wherever we can."
  elite_marine_tt: "Receive a well-trained §YMarine§! division.\n"
  elite_mountaineers_tt: "Receive a well-trained §YMountaineers§! division.\n"
 
  ENG_heavy_tanks:0 "New Tank Prototypes"
  ENG_heavy_tanks_desc:0 "It is clear that our doctrine of infantry tanks and cavalry tanks isn't working. Our tanks are either too weak, or too slow. To solve this, we must think of new designs not only strong enough to create breakthroughs, but also fast enough to exploit them."
  ENG_firefly:0 "Firefly"
- ENG_firefly_desc:0 "We need a way to counter heavily armoured German tanks such as the Tiger. Fortunately for us, the Americans have a very modifiable tank we might be able to attach a 17-pounder anti-tank gun on. It can penetrate up to 150mm from 1,000 meters away! Overkill? There's no such thing."
- ENG_armoured_warfare:0 "Armoured Mobile Warfare"
- ENG_armoured_warfare_desc:0 "Our deployment and usage of tanks is still inadequate in comparison to the Germans, we must learn from their blitzkrieg tactics while developing our radios so we can better coordinate our armoured offensives."
+ ENG_firefly_desc:0 "We need a way to counter heavily armoured German tanks such as the Tiger. Fortunately for us, the Americans have a very modifiable tank we might be able to attach a 17-pounder anti-tank gun on. It can penetrate up to 150mm of armour from 1,000 meters away! Overkill? There's no such thing."
+ ENG_armored_warfare:0 "Armoured Mobile Warfare"
+ ENG_armored_warfare_desc:0 "Our deployment and usage of tanks is still inadequate in comparison to the Germans, we must learn from their blitzkrieg tactics while developing our radios so we can better coordinate our armoured offensives."
 
  ENG_valentine:0 "Operation Valentine"
  ENG_valentine_desc:0 "Following the invasion and occupation of Denmark on 9 April 1940, British forces launched "Operation Valentine" to occupy the Faroe Islands. On 12 April, two destroyers of the British Royal Navy arrived in Tórshavn harbour.250 Royal Marines were disembarked, later to be replaced by other British troops."
