Changes to German Ideas More to come (for Sir David)

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -670,7 +670,7 @@
  GER_reichsarbeitsdienst_desc:0 "The Reichsarbeitsdienst was an Organisation in which young men and later women worked for the nation. We can decide to send them to factories or to build up our country! It also will help when they later become soldiers because they will need less training!"
  GER_reichsarbeitsdienst_I:0 "Expanded Reichsarbeitsdienst"
  GER_reichsarbeitsdienst_I_desc:0 "Now that we control so much of Europe, we can expand the Reichsarbeitsdienst and get much more people to work for our glorious nation."
- GER_reichsarbeitsdienst_I_tt:0 "This will improve your Reichsarbeitsdienst National Spirit."
+ GER_reichsarbeitsdienst_I_tt:0 "This will §Gimprove§! your §YReichsarbeitsdienst National Spirit.§!"
  GER_expand_cooperation_between_military_and_civilian_industry:0 "Expand Cooperation Between Military and Civilian Industry"
  GER_expand_cooperation_between_military_and_civilian_industry_desc:0 "Cooperation between our armament industry and our civilian industry can increase efficiency and help them find synergies. This idea comes from a General named Georg Thomas who was leading the armament department of the Wehrmacht for some time."
  GER_organisation_todt:0 "Organisation Todt"
