Random utility vehicle descriptions lol

--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -49,29 +49,29 @@
  SOV_motorized_lia_equipment_desc:0 "Small Vehicles and other cars used for liaison and transport in the field."
  SOV_motorized_lia_equipment_01:0 "PreWar Light Vehicles (Cars/Bikes)"
  SOV_motorized_lia_equipment_01_short:0 "GAZ-AA"
- SOV_motorized_lia_equipment_01_desc:0 "The Model AA was a licensed Ford model AA and was powered by the same 201-cubic-inch (3.3 L) engine I4 engine that the Model A Ford used. The engine produced a maximum of 40 horsepower at 2,200 rpm."
+ SOV_motorized_lia_equipment_01_desc:0 "This truck was a Licence-produced Ford Model A built at the Gorki Auto Plant from 1932-1938.  Nearly 1 Million units were produced by the time it was phased out in 1938, and featured many upgrades such as thicker material, better suspension, and varients such as semi-trucks and fire-trucks."
  SOV_motorized_lia_equipment_02:0 "EarlyWar Light Vehicles (Cars/Bikes)"
  SOV_motorized_lia_equipment_02_short:0 "GAZ-64"
- SOV_motorized_lia_equipment_02_desc:0 "The GAZ-64 was developed from a requirement developed during the 1940 war between the Soviet Union and Finland. The curb weigh of the car was 1,200 kg (2,646 lb). It was powered by a new developement of the old Ford 3.3 litre, inline-4 engine but now giving 50 hp (37 kW) and a top speed of 100 km/h (62 mph). It was produced using existing commercially available parts mostly from Ford."
+ SOV_motorized_lia_equipment_02_desc:0 "The GAZ-64 was developed from a requirement developed during the 1940 war between the Soviet Union and Finland for better off-road staff cars. This led to an exceptionally quick development time of less than 2 months and used many commercially available Ford parts.  However, it was quickly succeeded by the GAZ-64 and only ~650 were built."
  SOV_motorized_lia_equipment_03:0 "MidWar Light Vehicles (Cars/Bikes)"
  SOV_motorized_lia_equipment_03_short:0 "GAZ-67B"
- SOV_motorized_lia_equipment_03_desc:0 "The GAZ-67 and the subsequent GAZ-67B introduced 4-wheel drive to greatly enhance off-road capability. The 3.3 L Ford engine now produced 54 hp."
+ SOV_motorized_lia_equipment_03_desc:0 "The GAZ-67B was the successor to the GAZ-64, however it did not see much production as it was supplemented by US Lend Lease, therefore production did not ramp up until post-war.  A total of ~93000 of these were produced before it was discontinued in 1953."
  SOV_motorized_lia_equipment_04:0 "LateWar Light Vehicles (Cars/Bikes)"
  SOV_motorized_lia_equipment_04_short:0 "GAZ-69"
- SOV_motorized_lia_equipment_04_desc:0 "A new developement with a more modern engine with lower displacement (2.1 L) to decrease fuel consumption."
+ SOV_motorized_lia_equipment_04_desc:0 "The GAZ-69 was a post-war vehicle developed in 1946 and produced in 1953.  This became the primary staff car of the Eastern Bloc, with ~600,000 produced over a 20 year period."
  
  JAP_motorized_lia_equipment_01:0 "PreWar Light Vehicles (Cars/Bikes)"
- JAP_motorized_lia_equipment_01_short:0 "Toyota ABR"
- JAP_motorized_lia_equipment_01_desc:0 "The Toyota ABR was a military modification of the AB, Toyota's second production car. 353 were built between 1936 and 1942."
+ JAP_motorized_lia_equipment_01_short:0 "Toyota AA/AB/AC/ABR"
+ JAP_motorized_lia_equipment_01_desc:0 "The Toyota AA series were the main staff car used by the IJA and IJN thoughout WW2 on the Home Islands.  A total of 1872 from 1935-1945, with minor variations made between models such as a converible soft-top and different window designs.  These were extensively used by officers on the Home Islands, who preferred civilian cars rather than military ones."
  JAP_motorized_lia_equipment_03:0 "MidWar Light Vehicles (Cars/Bikes)"
  JAP_motorized_lia_equipment_03_short:0 "Kurogane Type 95"
- JAP_motorized_lia_equipment_03_desc:0 "The Kurogane Type 95 was a Japanese scout car designed by Tokyu Kurogane Industries in 1935. It was the world's first four-wheel drive passenger vehicle in mass production. About 4,700 were built between 1936 and 1944."
+ JAP_motorized_lia_equipment_03_desc:0 "The Kurogane Type 95 was a Japanese scout car designed by Tokyu Kurogane Industries in 1935 and extensively used in China where the air-cooled engine gave an advantage in the cold climates over traditionally cooled engines. It was the world's first four-wheel drive passenger vehicle in mass production, build mostly by hand and without an assembly line. About 4,700 were built between 1936 and 1944."
  JAP_motorized_lia_equipment_02:0 "EarlyWar Light Vehicles (Cars/Bikes)"
  JAP_motorized_lia_equipment_02_short:0 "Type 93 Staff Car"
- JAP_motorized_lia_equipment_02_desc:0 "The Type 93 referred to a 4-wheeled or a 6-wheeled staff car designed in 1933 and used throughout the war. It was very similar to the American 1934 Ford."
+ JAP_motorized_lia_equipment_02_desc:0 "The Type 93 wa designed in 1933 as a 6-wheeled car specifically for officers.  However, due to resource limitations the design was changed to a 4 wheel car later in the war.  It was very similar to the American 1934 Ford."
  JAP_motorized_lia_equipment_04:0 "LateWar Light Vehicles (Cars/Bikes)"
- JAP_motorized_lia_equipment_04_short:0 "Toyota AK-10"
- JAP_motorized_lia_equipment_04_desc:0 "The Toyota AK-10 was a 4-wheel drive 0.5 ton 'truck' prototype, very similar to a Jeep. While the prototype performed well, only a few were ever built."
+ JAP_motorized_lia_equipment_04_short:0 "Nissan 70 Staff Car"
+ JAP_motorized_lia_equipment_04_desc:0 "Little is known about this vehicle other than some minimal design schematics and pictures.  It appears to have been based on the Grahm Paige Crusader, of which Nissan bought the tooling while the company was at a loss during the Great Depression.  It is unknown how many were produced, but it is known that very few were ever built."
  ############## German Light vehicles
  GER_motorized_lia_equipment:0 "Utility Vehicles"
  GER_motorized_lia_equipment_short:0 "Utility Vehicles"
@@ -91,13 +91,16 @@
  ############## HOL Light vehicles
  HOL_motorized_lia_equipment_02:0 "EarlyWar Light Vehicles (Cars/Bikes)"
  HOL_motorized_lia_equipment_02_short:0 "DAF-139 "
- HOL_motorized_lia_equipment_02_desc:0 "Small Vehicles and other cars used for liaison and transport in the field."
- HOL_mechanized_equipment_1:1 "DAF Pantrado 1"
- HOL_mechanized_equipment_1_short:1 "DAF Pantrado 1"
- HOL_mechanized_equipment_2:1 "DAF Pantrado 2"
- HOL_mechanized_equipment_2_short:1 "DAF Pantrado 2"
- HOL_mechanized_equipment_3:1 "DAF Pantrado 3"
- HOL_mechanized_equipment_3_short:1 "DAF Pantrado 3"
+ HOL_motorized_lia_equipment_02_desc:0 "The DAF-139 was a amphibious 4x4 car built unconventionally with the engine in the middle and the ability to drive from both the front and the rear seats.  It was tested in 1940, however the only prototype was destroyed to prevent it from falling into the German's hands."
+ HOL_mechanized_equipment_1:1 "M39 'Pantrado' Pantserwagen"
+ HOL_mechanized_equipment_1_short:1 "M39 Pantrado 1"
+ HOL_mechanized_equipment_1_desc:1 "The Pantrado was a 6x4 armored car designed in 1935 on the new Trado truck suspension system and armed with a relatively powerful 37mm Bofors cannon from Sweden.  Only 3 were ever used, all of which were lost on the Eastern Front by the Germans."
+ HOL_mechanized_equipment_2:1 "M39 'Pantrado' 2"
+ HOL_mechanized_equipment_2_short:1 "M39 'Pantrado' 2"
+ HOL_mechanized_equipment_2_desc:1 "The army was initially very negative about this model, which had been designed 'without regard for ergonomics or fighting abilities'.  However, it was eventually accepted regardless."
+ HOL_mechanized_equipment_3:1 "M39 'Pantrado' 3"
+ HOL_mechanized_equipment_3_short:1 "M39 'Pantrado' 3"
+ HOL_mechanized_equipment_3_desc:1 "A single prototype Pantrado 3 was constucted, with more influence from British tankettes from the 20s.  Sloped armor was added in a welded monocoque construction, and a machine gun was added to the hull."
  ############## UK Light vehicles
  ENG_motorized_lia_equipment:0 "Utility Vehicles"
  ENG_motorized_lia_equipment_short:0 "Utility Vehicles"
