--- a/bicemodded/localisation/english/equip_naval_l_english.yml
+++ b/bicemodded/localisation/english/equip_naval_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  ### SCAR TEST TEST TEST TEST TEST TEST###
- submarine:0 "£ship_submarine_icon_small Submarine"
+ submarine:0 "Submarine"
  submarine_desc:0 "Submarines employ stealth and powerful torpedoes to destroy enemy convoys."
  submarine_light:0 "£ship_submarine_light_icon_small Light Submarine"
  submarine_light_desc:0 "Light Submarines are smaller and cheaper versions of Fleet Submarines with usually a low range. It's moderate torpedo armament is just fine for point defence and to fight off ships in coastal areas."
@@ -13,7 +13,7 @@
  heavy_cruiser_desc:0 "A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
  destroyer:0 "£ship_destroyer_icon_small Destroyer"
  destroyer_desc:0 "The lightest screening vessel. Its job is to defend larger ships and to find and destroy submarines."
- carrier:0 "£ship_carrier_icon_small Fleet Carrier"
+ carrier:0 "Carrier"
  carrier_desc:0 "A capital ship able to carry wings of powerful carrier capable aircraft into battle. Also useful as a floating airfield you can position off the coast of your enemy."
  light_carrier:0 "£ship_light_carrier_icon_small Light Carrier"
  light_carrier_desc:0 "A less capable but more affordable version of the Aircraft Carrier, designed primarily for convoy protection and escorting more valuable warships."
@@ -1965,5 +1965,5 @@ SIA_sh_battleship_2_desc:0 "An improvement on our earlier super heavy design wit
  ship_hull_super_heavy_2_desc:0 "The current state of the world no longer has any room for abiding by naval treaties. Without these limitations, we can focus entirely on creating the heaviest, most well-armed battleships of all time, able to engage multiple lesser vessels."
  ship_hull_cruiser_submarine:0 "Cruiser Submarine"
  ship_hull_cruiser_submarine_desc:0 "A larger submarine hull optimized for longer range. Can be equipped with additional fuel tanks for even more range, or a small scout airplane."
- screen_ship:0 "£ship_light_cruiser_icon_small Screens"
- capital_ship:0 "£ship_battleship_icon_small Capital Ships"
+ screen_ship:0 "Screen Ships"
+ capital_ship:0 "Capital Ships"
