--- a/bicemodded/localisation/english/unit_l_english.yml
+++ b/bicemodded/localisation/english/unit_l_english.yml
@@ -515,7 +515,7 @@
  
  artillery_heavy:0 "Hvy Artillery"
  artillery_heavy_desc:0 "Heavy Artillery Detachment. Siege guns mostly assigned to division-level. The heavy gun carriages often had to be disassembled for transport. One battalion requires §Y2§! railway guns and §Y15§! additional trucks. One battalion requires §Y8§! heavy guns and §Y36§! additional trucks. "
- artillery_heavy_mot:0 "Mot.Hvy Artillery"
+ artillery_heavy_mot:0 "Motorized Heavy Artillery"
  artillery_heavy_mot_desc:0 "Motorized Heavy Support Artillery Detachment. Siege guns mostly assigned to division-level. Pulled by trucks."
  
  artillery_rail:0 "Railway Artillery Gun"
