bugfixes and USA tweak

--- a/bicemodded/localisation/english/equip_naval_l_english.yml
+++ b/bicemodded/localisation/english/equip_naval_l_english.yml
@@ -21,7 +21,7 @@
  battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
  battle_cruiser:0 "£ship_battle_cruiser_icon_small Battlecruiser"
  battle_cruiser_desc:0 "A large capital ship often with offensive abilities close to those of a battleship, but with weaker armor traded for a faster speed."
- convoy:0 "£ship_transport_icon_small Convoy"
+ convoy:0 "Convoy"
  convoy_desc:0 "Convoys used for international trade of goods and resources. Also used to ferry troops around and for performing naval invasions."
  sh_battleship:0 "£ship_sh_battleship_icon_small Superheavy Battleship"
  sh_battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
