--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1062,8 +1062,10 @@
  GER_werwolf_desc:0 "The Werwolf was an organisation that should terrorise enemy troops in already occupied territory. But it couldn't achieve much and after Hitler's death Dönitz prohibited further actions!"
  GER_advanced_blitzkrieg:0 "Advanced Blitzkrieg"
  GER_advanced_blitzkrieg_desc:0 "Our enemies begin to counter our great strategies, so we need to put some effort into further improving our tactics!"
+ advanced_blitzkrieg_bonus:0 "Modern Blitzkrieg Bonus"
  GER_mobile_defense:0 "Mobile Defense"
  GER_mobile_defense_desc:0 "Mobile defense is a manoeuvre by military units that repulses an attack by the use of well planned counter-attacks by the defender which seek to avoid a pitched battle."
+ mobile_defense_bonus:0 "Mobile Defense Bonus"
  GER_try_to_use_anti_air_as_anti_tank_weapon:0 "Multi-Purpose Guns"
  GER_try_to_use_anti_air_as_anti_tank_weapon_desc:0 "The Flak 88 can fill both anti-air and anti-tank roles. German gunners in both field artillery and anti-aircraft units are trained in how to engage tanks, their guns equipped with the sights to do so, and (especially in the case of the Flak 88) they have the armour-piercing rounds to do so."
  GER_anti_air_as_anti_tank_weapon_effect:0 "Enables §HUse Anti-Air on Tanks§!\nMotorized Heavy Anti-Air :\n	Piercing: §G+15%§!\n	Hard Attack: §G+10%§!\n		Air Attack: §G-10%§!\n"
@@ -2496,6 +2498,8 @@ USA_combined_bomber_offensive:0 "Combined Bomber Offensive"
 USA_combined_bomber_offensive_desc:0 "With another Great Power on our side, we have unexpected advantages in researching and applying large-scale strategic bombing."
 USA_heavy_fighter:0 "Bomber Escorts"
 USA_heavy_fighter_desc:0 "Our bombers face significant enemy opposition in the air, and especially when flying into the industrial heartlands of the enemy. We need to focus on developing and producing heavy fighters that have the range to assist our bombing operations."
+USA_advanced_airframe:0 "Advanced Airframe Designs"
+USA_advanced_airframe_desc:0 "Our aviation industry is truely unmatched, we need to use this advantage to build aircrafts so advanced they can literally bomb the enemy out of the war."
 USA_fund_the_navy:0 "Fund The Navy"
 USA_fund_the_navy_desc:0 "We must be able to adapt to anything new our enemies throws at us. Increased funding of our navy exercises will lead to a more efficient navy that can tactically outperform our enemies."
 USA_battleship_primacy:0 "Battleship Primacy"
