--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -3290,6 +3290,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  light_armor_bonus:0 "§YLight Armor§! models bonus"
  light_td_bonus:0 "§YLight Tank Destroyer§! models bonus"
  light_spg_bonus:0 "§YLight SPG§! models bonus"
+ light_aa_bonus:0 "§YLight SP-AA§! models bonus"
  amph_armor_bonus:0 "§YArmored Amphibious§! models bonus"
  amph_mech_bonus:0 "§YMechanized Amphibious§! models bonus"
 
