--- a/bicemodded/localisation/english/bramja_events_l_english.yml
+++ b/bicemodded/localisation/english/bramja_events_l_english.yml
@@ -8,8 +8,8 @@
  bramja.1.a:0 "Hopefully this is handled before our enemies can use this to their advantage..."
  bramja.1.b:0 "Cowardice only leads to destruction..."
  bramja.2.t:0 "Social unrest reaches tipping point in [From.GetNameDef]"
- bramja.2.d:0 "\nThe cocktail of existing internal divides and increasing outside pressures, is starting to tear the [From.GetAdjective] nation apart from within. The [From.GetAdjective] [From.GetRulingParty] has to reverse the trend if they want to keep up in the current arms rat race."
- bramja.2.a:0 "The Home Front cannot falter, our men can't be left to fight on empty stomachs or barehanded!"
+ bramja.2.d:0 "\nThe cocktail of existing internal divides and increasing outside pressures, is starting to tear the [From.GetAdjective] nation apart from within. Strikes have broken out accross [From.GetNameDef] which the [From.GetAdjective] [From.GetRulingParty] has to resolve to reverse the trend."
+ bramja.2.a:0 "The Home Front cannot falter, the men must be put back to work!"
  bramja.2.b:0 "The ideological foundations of [From.GetNameDef] seem to be sinking like on quicksand!"
  bramja.3.t:0 "Insurrection in [From.GetNameDef]!"
  bramja.3.d:0 "Little more than two decades ago, mutinies sprang up as the Great War seemingly endlessy condused the life spirit of nations. However the people who rose up often saw their countries defeated and rarely ended up better in the long run...\nIf the [From.GetAdjective] leadership doesn't stop this in its infancy, it might well mean the end of the war...and their nation"
