--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2580,11 +2580,12 @@ USA_marine_corps:0 "Marine Corps"
 USA_marine_corps_desc:0 "The US Marine Corps has a long history stretching back hundreds of years. Now, more than ever, it is crucial for us to expand this vital part of the armed forces."
 USA_marine_corps_expansion:0 "Marine Corps Expansion"
 USA_marine_corps_expansion_desc:0 "We must continue our efforts to expand the Marine Corps. Any landing is doomed to fail without proper equipment and training."
-USA_MC_1_tt:0 "§YGain 1 Elite Marine Division in San Diego!§!\n"
-USA_Marine_two_tt:0 "§YGain 1 Elite Marine Division in San Diego!§!\n"
-USA_Marine_three_tt:0 "§YGain 1 Elite Marine Division in San Diego!§!\n"
-USA_Marine_four_tt:0 "§YGain 1 Elite Marine Division in San Diego!§!\n"
-USA_Marine_five_tt:0 "§YGain 1 Elite Marine Division in San Diego!§!\n"
+USA_MC_1_tt:0 "§YGain 1 Elite Marine Division in San Diego, California!§!\n"
+USA_Marine_two_tt:0 "§YGain 1 Elite Marine Division in San Diego, California!§!\n"
+USA_Marine_three_tt:0 "§YGain 1 Elite Marine Division in San Diego, California!§!\n"
+USA_Marine_four_tt:0 "§YGain 1 Elite Marine Division in San Diego, California!§!\n"
+USA_Marine_five_tt:0 "§YGain 1 Elite Marine Division in San Diego, California!§!\n"
+USA_PARA_1_tt:0 "§YGain 1 Elite Airborne Division in Fort Benning, Georgia!§!\n"
 USA_proximity_fuze:0 "Proximity Fuze"
 USA_proximity_fuze_desc:0 "A proximity fuze would be a massive step forward for our anti-air guns, as it significantly increases the lethality of shells fired. The United States is uniquely capable of combining theoretical knowledge with practical engineering to achieve this breakthrough. We just need to miniaturize the fuze and make it reliable enough for widespread usage."
 ### USA INDUSTRIAL ADDITIONS ###
