--- a/bicemodded/localisation/english/lar_focus_l_english.yml
+++ b/bicemodded/localisation/english/lar_focus_l_english.yml
@@ -651,6 +651,8 @@
  FRA_global_integration_desc:0 "The British Empire is a finely-tuned system of mutually supporting parts. There is nothing saying that we can't do just as well with our colonies."
  FRA_begin_rearmament:0 "Begin Rearmament"
  FRA_begin_rearmament_desc:1 "The 20-year armistice Marshall Foch predicted in 1919 is rapidly coming to an end, and the world is looking increasingly likely to erupt into war in the next few years. We must be ready."
+ FRA_rearmament:0 "Complete Rearmament"
+ FRA_rearmament_desc:1 "Our rearmament plan has completed and we can now start producing equipment for the frontline in adequate quantities."
  FRA_firepower_kills:0 "Firepower Kills"
  FRA_firepower_kills_desc:0 "The lessons of the Great War were as simple as they were cruel: the days of men fighting one another over open sights are over. Today, killing is done on a mass scale with the most modern weapons at a long range."
  FRA_methodical_battle:0 "Methodical Battle"
