--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -81,19 +81,19 @@
  fighter_equipment_0:0 "Interwar Fighter"
  fighter_equipment_0_short:0 "Fighter"
  fighter_equipment_0_desc:0 "While fighter aircraft underwent many changes through the Great War, and since, the bi-plane design is becoming obsolete. We must begin to translate civilian technological advances into military applications."
- fighter_equipment_1:0 "Fighter 36"
+ fighter_equipment_1:0 "Fighter I"
  fighter_equipment_1_short:0 "Fighter I"
  fighter_equipment_1_desc:0 "Light airframes been revolutionized with the introduction of radial engines, monoplane designs and all metal skin construction. This design is our attempt at creating our first modern fighter plane."
- fighter_equipment_2:0 "Fighter 39"
+ fighter_equipment_2:0 "Fighter II"
  fighter_equipment_2_short:0 "Fighter II"
  fighter_equipment_2_desc:0 "The pace of fighter advancements is astounding, and as such, we must continue to incorporate the technology as well as improve upon existing concepts. Our new fighter design must be capable of high speed, high performance at altitude and the best range possible. Additionally, it must be very well armed."
- fighter_equipment_3:0 "Fighter 41"
+ fighter_equipment_3:0 "Fighter III"
  fighter_equipment_3_short:0 "Fighter III"
  fighter_equipment_3_desc:0 "While our previous generations of fighter plane have proven worthy, any advantage gained by a better design should be taken. This aircraft will be the pinnacle platform of piston-engined fighter that will have excellent power, high agility, deadly weaponry and good range."
- fighter_equipment_4:0 "Fighter 43"
+ fighter_equipment_4:0 "Fighter IV"
  fighter_equipment_4_short:0 "Fighter IV"
  fighter_equipment_4_desc:0 "While our previous generations of fighter plane have proven worthy, any advantage gained by a better design should be taken. This aircraft will be the pinnacle platform of piston-engined fighter that will have excellent power, high agility, deadly weaponry and good range."
- fighter_equipment_5:0 "Fighter 44"
+ fighter_equipment_5:0 "Fighter V"
  fighter_equipment_5_short:0 "Fighter V"
  fighter_equipment_5_desc:0 "While our previous generations of fighter plane have proven worthy, any advantage gained by a better design should be taken. This aircraft will be the pinnacle platform of piston-engined fighter that will have excellent power, high agility, deadly weaponry and good range."
  generic_hvyfighter:0 "Interwar Heavy Fighter"
@@ -229,23 +229,6 @@
  cv_nav_bomber_equipment_5:0 "Carrier Bomber V"
  cv_nav_bomber_equipment_5_short:0 "Carrier Bomber V"
  cv_nav_bomber_equipment_5_desc:0 "An advanced bomber modified to launch from and land on aircraft carriers."
- generic_cv_cas:0 "Interwar Carrier CAS"
- cv_cas:0 "Carrier CAS"
- cv_CAS_equipment_0:0 "Carrier CAS I"
- cv_CAS_equipment_0_short:0 "Carrier CAS I"
- cv_CAS_equipment_0_desc:0 "An early close air support plane modified to launch from and land on aircraft carriers."
- cv_CAS_equipment_1:0 "Carrier CAS II"
- cv_CAS_equipment_1_short:0 "Carrier CAS II"
- cv_CAS_equipment_1_desc:0 "An early close air support plane modified to launch from and land on aircraft carriers."
- cv_CAS_equipment_2:0 "Carrier CAS III"
- cv_CAS_equipment_2_short:0 "Carrier CAS III"
- cv_CAS_equipment_2_desc:0 "An improved close air support plane modified to launch from and land on aircraft carriers."
- cv_CAS_equipment_3:0 "Carrier CAS IV"
- cv_CAS_equipment_3_short:0 "Carrier CAS IV"
- cv_CAS_equipment_3_desc:0 "An advanced close air support plane modified to launch from and land on aircraft carriers."
- cv_CAS_equipment_4:0 "Carrier CAS V"
- cv_CAS_equipment_4_short:0 "Carrier CAS V"
- cv_CAS_equipment_4_desc:0 "An advanced close air support plane modified to launch from and land on aircraft carriers."
  cv_fighter:0 "Carrier Fighter"
  generic_cv_fighter:0 "Interwar Carrier Fighter"
  cv_fighter_equipment_0:0 "IW Carrier Fighter"
