research categories cleanup italy

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -49,7 +49,7 @@
  support_folder_desc:0 "Recon, Engineers, Field Hospitals & other support companies."
  armour_folder:0 "Armor"
  armour_folder_desc:0 "Tanks and their variants"
- naval_gunry_bonus:0 "Naval Artillery Bonus"
+ naval_gunry_bonus:0 "Naval Guns Bonus"
  nsb_armour_folder:0 "Armor"
  nsb_armour_folder_desc:0 "Tanks and their variants."
  click_to_open_doctrine:0 "§GClick§! to open doctrines"
@@ -101,10 +101,12 @@
  advanced_equipment_conversion:0 "Advanced Equipment Conversion"
  advanced_equipment_conversion_desc:0 "Converted older equipment have been an tremendous success and helped to overcome shortages of modern vehicles. Therefore soldiers are encouraged to salvage whatever they can and factories keep refining their methods to help with the war effort."
  
- hospital_tech:0 "Field Hospitals"
  logistics_tech:0 "Logistics Company"
  recon_tech:0 "Reconnaissance Company"
  generic_armor:0 "Armour technology"
+ 
+ logistics_tech_research:0 "Logistics company research speed"
+ logistics_tech_bonus:0 "Logistics Bonus"
  
  HUN_light_infantry_tech:0 "Light Infantry Divisions Doctrine"
  HUN_light_infantry_tech_desc:0 "Reducing the amount of supporting arms in our infantry divisions makes them more flexible and gives them an edge in combat in restricted terrain like Cities and forests."
@@ -1593,9 +1595,9 @@
  cat_mechanized_equipment:0 "Mechanized models"
  
  tp_tech_research:0 "Transport models Research Speed"
- asw_tech_research:0 "Anti-Submarine Warfare Technology Research Speed"
- naval_minesweeping_research:0 "Naval Minesweeping Technology Research Speed"
- naval_minelaying_research:0 "Naval Minelaying Technology Research Speed"
+ asw_tech_research:0 "Anti-Submarine Warfare Research Speed"
+ naval_minesweeping_research:0 "Naval Minesweeping Research Speed"
+ naval_minelaying_research:0 "Naval Minelaying Research Speed"
  synth_resources_research:0 "Synthetic Resources Research Speed"
  light_fighter_research:0 "Fighter models Research Speed"
  cat_heavy_fighter_research:0 "Heavy Fighter models Research Speed"
@@ -1622,14 +1624,14 @@
  rocketry:0 "Rocketry technology"
  motorized_tech:0 "Motorization technology"
  
- computing_tech_research:0 "Computing technology Research Speed"
- radar_tech_research:0 "RADAR technology Research Speed"
- infantry_tech_research:0 "Infantry technology Research Speed"
- support_tech_research:0 "Support technology Research Speed"
- marine_tech_research:0 "Marine technology Research Speed"
- construction_tech_research:0 "Construction technology Research Speed"
+ computing_tech_research:0 "Computing Research Speed"
+ radar_tech_research:0 "RADAR Research Speed"
+ infantry_tech_research:0 "Infantry Research Speed"
+ support_tech_research:0 "Support Research Speed"
+ marine_tech_research:0 "Marines Research Speed"
+ construction_tech_research:0 "Construction Research Speed"
  rocketry_research:0 "Rocketry Research Speed"
- motorized_tech_research:0 "Motorization technology Research Speed"
+ motorized_tech_research:0 "Motorization Research Speed"
  
 
  radar_bonus:0 "Radar Research Bonus" ## todo, remove the _bonus from here
@@ -1654,7 +1656,7 @@
  nuclear_research:2 "Nuclear Research Speed"
  industry_research:2 "Industrial Research Speed"
  electronics_research:2 "Electronics Research Speed"
- jet_technology_research:2 "Jet Technology Research Speed"
+ jet_technology_research:2 "Jet Research Speed"
  
  
  battlefield_support_tree:0 "Battlefield Support Doctrine"
@@ -1719,10 +1721,8 @@
  heavy_air:0 "Heavy aircraft"
  naval_air:0 "Naval aircraft"
  cat_trade_interdiction:0 "Trade Interdiction Doctrines"
- suicide_craft:0 "Yokosuka MXY7 Ohka"
- suicide_craft_desc:0 "Rocket powered kamikaze craft"
  electronics:0 "Electronics"
- air_equipment_research:2 "Air Research Speed"
+ air_equipment_research:2 "Airplane Models Research Speed"
  ITA_armor_bonus_3:0 "Learn From German Tank Designs"
  ITA_armor_bonus_4:0 "Evaluate Tank Designs used in Spain"
 
